force-app/main/default/objects/Segment__c/Segment__c.object-meta.xml
<CustomObject>
    <label>Segment (Old)</label>
    <nameField>
        <displayFormat>SG{00000000}</displayFormat>
        <label>Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segments (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>