force-app/main/default/objects/Segment__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <label>Arrival Airport</label>
    <length>6</length>
    <type>Text</type>
</CustomField>