force-app/main/default/objects/Segment__c/fields/Arrival_Airport_Code_Context__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Code_Context__c</fullName>
    <label>Arrival Airport Code Context</label>
    <length>10</length>
    <type>Text</type>
</CustomField>