force-app/main/default/objects/Segment__c/fields/Arrival_Date_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_Time_Text__c</fullName>
    <label>Arrival Date Time Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>