force-app/main/default/objects/Segment__c/fields/Change_Of_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Change_Of_Gauge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Of Gauge</label>
    <type>Checkbox</type>
</CustomField>