force-app/main/default/objects/Segment__c/fields/Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time__c</fullName>
    <label>Elapsed Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>