force-app/main/default/objects/Segment__c/fields/Funnel_Flight__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Flight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funnel Flight</label>
    <type>Checkbox</type>
</CustomField>