force-app/main/default/objects/Segment__c/fields/Marketing_Airline_Code__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Airline_Code__c</fullName>
    <label>Marketing Airline Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>