force-app/main/default/objects/Segment__c/fields/Marketing_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Flight_Number__c</fullName>
    <label>Marketing Flight Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>