force-app/main/default/objects/Segment__c/fields/Number_In_Party__c.field-meta.xml
<CustomField>
    <fullName>Number_In_Party__c</fullName>
    <label>Number In Party</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>