force-app/main/default/objects/Segment__c/fields/Operating_Class_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Operating_Class_Of_Service__c</fullName>
    <label>Operating Class Of Service</label>
    <length>5</length>
    <type>Text</type>
</CustomField>