force-app/main/default/objects/Segment__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <referenceTo>PNR__c</referenceTo>
    <relationshipLabel>Segments</relationshipLabel>
    <relationshipName>Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>