force-app/main/default/objects/Segment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Departure_Airport__c</columns>
    <columns>departure_date__c</columns>
    <columns>Arrival_Airport__c</columns>
    <columns>arrival_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>